use params when emitting production methods